--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="progress-bar">
         <div class="progress"></div>
       </div>
-      <audio src="https://shorturl.at/jC3BH"></audio>
+      <audio src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
     </div>
     <div class="track" data-index="1">
       <button class="play-button"></button>
